--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1117,7 +1117,11 @@ header {
             .box {
                 box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
                 cursor: pointer;
-                transition: all .3s ease-in-out;
+                transition: all .2s ease-in-out;
+
+                &:hover {
+                    border: 3px solid $greencolor;
+                }
 
                 .box-content {
                     padding: 2rem 1rem;
